fix: global.configFiles schema

--- a/internal/cli/cli.ocs.yaml
+++ b/internal/cli/cli.ocs.yaml
@@ -51,7 +51,7 @@ global:
   configFiles:
     yamlcfg:
       path: "~/.ocli/config.yaml"
-      type: "YAML"
+      format: "YAML"
 
 commands:
   ocli {command} <arguments> [flags]:
